--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,30 @@ spring.jpa.open-in-view=false
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+
+#redis
+spring.redis.host=127.0.0.1
+#Redis服务器连接端口
+spring.redis.port=6379
+#Redis服务器连接密码（默认为空）
+spring.redis.password=
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-idle=8
+#连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=
+#连接池中的最大空闲连接
+#spring.redis.jedis.pool.max-idle=8
+#连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+#连接超时时间（毫秒）
+spring.redis.timeout=30000
+
+
+
+#出现错误时, 直接抛出异常
+spring.mvc.throw-exception-if-no-handler-found=true
+#不要为我们工程中的资源文件建立映射
+spring.resources.add-mappings=false
+
+
+
