优惠卷支付

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.application.name=jtakeaway
 # 应用服务web访问端口
 server.port=8080
+server.servlet.context-path=/api-0.1
 
 #通用数据源配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -58,3 +59,6 @@ spring.resources.add-mappings=false
 
 
 
+#日志
+#logging.file.path=
+logging.file.name=log/jlog.log
