--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,20 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.3.0.RELEASE</version>
         </dependency>
+
+<!--        日志-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
