--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,18 @@ spring.resources.add-mappings=false
 #日志
 #logging.file.path=
 logging.file.name=log/jlog.log
+
+
+
+#邮件
+#配置上下文，根据自己项目设置
+#配置邮件消息
+spring.mail.host=smtp.qq.com
+#发送邮件者信箱
+spring.mail.username=3389256733@qq.com
+#这里不是邮箱的登录密码，而是开启PO3/SMTP服务时邮箱的授权码
+spring.mail.password=tvvhxfgyoutkcjfj
+spring.mail.default-encoding=UTF-8
+spring.mail.port=587
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.debug=false
