--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,3 +77,7 @@ spring.mail.default-encoding=UTF-8
 spring.mail.port=587
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.debug=false
+
+
+#设置静态资源路径，多个以逗号分隔
+#spring.resources.static-locations=classpath:static/,classpath:resources/
