--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,15 +69,36 @@ logging.file.name=log/jlog.log
 #配置上下文，根据自己项目设置
 #配置邮件消息
 spring.mail.host=smtp.qq.com
-#发送邮件者信箱
 spring.mail.username=3389256733@qq.com
-#这里不是邮箱的登录密码，而是开启PO3/SMTP服务时邮箱的授权码
-spring.mail.password=tvvhxfgyoutkcjfj
+spring.mail.password=aifmxctfnzcbchec
 spring.mail.default-encoding=UTF-8
-spring.mail.port=587
+spring.mail.port=465
+#登录服务器是否需要认证
+spring.mail.properties.mail.smtp.auth=true
+#SSL证书Socket工厂
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+#使用SMTPS协议465端口
+spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.debug=false
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+
+
+##邮件发送配置
+#spring.mail.default-encoding=UTF-8
+#spring.mail.host=smtp.163.com
+#spring.mail.protocol=smtp
+#spring.mail.port=25
+#spring.mail.username=18582672979@163.com
+#spring.mail.password=FLBFYERXMSNVDPXS
+#spring.mail.properties.mail.smtp.starttls.enable = true
+#spring.mail.properties.mail.smtp.starttls.required = true
+
 
 
 #设置静态资源路径，多个以逗号分隔
-#spring.resources.static-locations=classpath:static/,classpath:resources/
+web.resources-path:/www/server/springboot/resources/
+#web.resources-path:D://jerrryImg
+file.staticAccessPath=/resources/**
+file.uri=/resources/
+spring.resources.static-locations=classpath:static/,classpath:resources/,classpath:public/,classpath:MATA-INF/resources/,file:${web.resources-path}
